kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person-detection-service
  namespace: deepview
spec:
  selector:
    matchLabels:
      app: person-detection-service
  template:
    metadata:
      labels:
        app: person-detection-service
    spec:
      containers:
      - name: person-detection-service
        image: ghcr.io/deepview-analytics/person_detection_service_yolov8s:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"
