kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: person-detection-service
  namespace: deepview
spec:
  selector:
    app: person-detection-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
